--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "Bhupesh Dewangan",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.40.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "datauri": "^4.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
